2010-08-06  Jürgen Hötzel  <juergen@archlinux.org>

	* comint.el (comint-mode): Make directory tracking functions
	functional on remote files.  (Bug#6764)

2010-08-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc/diff-mode.el (diff-mode-shared-map): Bind g to revert-buffer.

2010-08-05  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/find-gc.el (find-gc-source-files): Rename
	unexec.c => unexcoff.c.

	* emacs-lisp/authors.el (authors-fixed-entries): Rename
	unexec.c => unexcoff.c.

2010-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-dired-uncache): Flush directory
	cache, not only file cache.
	(tramp-process-sentinel): New defun.
	(tramp-handle-start-file-process): Use it, in order to invalidate
	file caches.

2010-08-03  Leo  <sdl.web@gmail.com>

	* server.el (server-start): Simplify loop.

2010-08-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el (screen-height, screen-width, set-screen-width)
	(set-screen-height): Remove ancient compatibility aliases.

	* textmodes/fill.el (justify-current-line): Don't add 1 to nspaces
	when justifying.  It seems useless and harmful for ncols=1 (bug#6738).

	* emacs-lisp/timer.el (timer-event-handler): Protect against timers
	that change current buffer.

2010-08-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* mouse.el (mouse-fixup-help-message): Match "mouse-2" only at the
	beginning of the string.  Use `string-match-p'.  (Bug#6765)

2010-08-01  Jan Djärv  <jan.h.d@swipnet.se>

	* cus-start.el (x-gtk-use-system-tooltips): New variable.

2010-08-01  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el (package--list-packages): Fix column alignment.
	(package--builtins): Tweak descriptions.
	(package-print-package): Upcase descriptions if necessary.
	Show all built-in packages in font-lock-builtin-face.
	(package-list-packages-internal): Omit "emacs" package.
	Show status of built-in packages as "built-in".

2010-07-31  Chong Yidong  <cyd@stupidchicken.com>
